Hero and conference banners nearly complete

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -24,8 +24,12 @@ body {margin-top: 71px;} // offset for header
 
 // --- TYPOGRAPHY & GLOBALS ---
 
-h1, h2, h3, h4, h5, h6 {color: $colorBlack; font-family: $fontBitter;}
-h1 {font-weight: normal;}
+h2, h3, h4, h5, h6 {color: $colorBlack; font-family: $fontBitter;}
+h1 {
+	background: url('../../img/hero-logo.png') center left no-repeat; padding-left: 140px;
+	color: $colorWhite; font-family: $fontDefault; font-weight: 100; font-size: 65px; line-height: 55px;
+	strong {display: block; font-size: 70px;}
+}
 h2 {font-size: 40px; margin-bottom: 10px;}
 p, a {color: $colorGrey; font-size: 16px; line-height: 24px;}
 a {text-decoration: none; transition: all 50ms ease-in-out;}
@@ -36,9 +40,13 @@ ul li {list-style: none;}
 
 .wrap {max-width: 1024px; margin: auto;}
 .button {
-	background: $colorBlack; border-radius: 15px; color: $colorWhite; line-height: 30px; padding: 0 40px;
+	background: $colorBlack; border-radius: 99px; display: inline-block; color: $colorWhite; height: 30px; font-size: 12px; line-height: 30px; padding: 0 40px; text-transform: uppercase;
 	&:hover, &:active, &:focus {background: $colorGrey; color: $colorWhite;}
 }
+	.btnBigGreen {
+		background: $colorGreen; font-size: 16px; line-height: 45px; height: 45px;
+		&:hover, &:active, &:focus {background: $colorYellow;}
+	}
 
 // --- PAGE ---
 
@@ -57,7 +65,8 @@ header {
 
 // Hero Banner
 #hero {
-	background: $colorBlack url('../../img/hero-graphic.png') center center repeat-x; background-size: cover; height: 460px; padding: 20px 0;
+	background: $colorBlack url('../../img/hero-graphic.png') center center repeat-x; background-size: cover; padding: 50px 20px 80px;
+	p {color: $colorWhite; font-size: 16px; line-height: 24px; margin: 20px 0;}
 }
 
 // Services
@@ -84,7 +93,13 @@ header {
 
 // Conference
 #conference {
-	background: $colorBlack url('../../img/bg-dark.jpg') center center fixed; height: 260px; padding: 20px 0;
+	background: $colorBlack url('../../img/bg-dark.jpg') center center fixed; border-bottom: 1px solid $colorGreyLight;
+	#confText {
+		background: url('../../img/conf-device.png') center left no-repeat; width: 400px; margin: auto; padding: 50px 0 50px 200px;
+		h2, h4 {color: $colorWhite;}
+		h2 {font-size: 70px; line-height: 70px;}
+		h4 {color: $colorGrey; font-family: $fontDefault; font-size: 40px; line-height: 40px; font-weight: 100; margin: 20px 0;}
+	}
 }
 
 // Team
