--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -18,6 +18,7 @@ $fontBitter: 'Bitter', serif; // Google Font (400/700)
 // --- CORE ---
 
 * {margin: 0; padding: 0;}
+button {border: none; background: none;}
 
 html {background: $colorWhite; font-family: $fontDefault;}
 body {margin-top: 71px;} // offset for header
@@ -39,7 +40,8 @@ ul li {list-style: none;}
 // --- CLASSES ---
 
 .wrap {max-width: 1024px; margin: auto;}
-.button {
+.button, button {
+	cursor: pointer;
 	background: $colorBlack; border-radius: 99px; display: inline-block; color: $colorWhite; height: 30px; font-size: 12px; line-height: 30px; padding: 0 40px; text-transform: uppercase;
 	&:hover, &:active, &:focus {background: $colorGrey; color: $colorWhite;}
 }
@@ -47,13 +49,17 @@ ul li {list-style: none;}
 		background: $colorGreen; font-size: 16px; line-height: 45px; height: 45px;
 		&:hover, &:active, &:focus {background: $colorYellow;}
 	}
+	.btnLineWhite {
+		background: none; border: 1px solid $colorGrey; color: $colorGrey;
+		&:hover, &:active, &:focus {background: none; border: 1px solid $colorWhite; color: $colorWhite;}
+	}
 
 // --- PAGE ---
 
 // Header
 header {
 	background: $colorWhite; border-bottom: 1px solid $colorGreyLight; padding: 20px; overflow: hidden;
-	position: fixed; top: 0; left: 0; right: 0;
+	position: fixed; top: 0; left: 0; right: 0; z-index: 999;
 	#logo, #navPrimary {float: left;}
 	#btnContact {float: right;}
 }
@@ -82,13 +88,28 @@ header {
 	}
 }
 #cells {
-	overflow: hidden;
-	.cell {border: 1px solid $colorGreyLight; float: left; margin-top: 20px; padding: 20px; width: 460px;}
-	.cell:nth-child(odd) {margin-right: 20px;}
-	#tutorials {border-bottom: 10px solid $colorBlue;}
-	#videos {border-bottom: 10px solid $colorYellow;}
-	#books {border-bottom: 10px solid $colorRed;}
-	#podcasts {border-bottom: 10px solid $colorGreen;}
+	display: flex; flex-wrap: wrap; margin-top: 50px;
+	.cell {width: 50%;}
+	.cellInner {
+		border: 1px solid $colorGreyLight; margin: 10px; overflow: hidden;
+		-webkit-transition: transform 500ms linear; -ms-transition: transform 500ms linear; transition: transform 500ms linear;
+		-webkit-transform: scale(1.0); -ms-transform: scale(1.0); transform: scale(1.0);
+
+		div {float: left; margin-right: 20px; width: 200px; height: 200px; overflow: hidden;}
+		h2 {font-size: 28px; line-height: 28px; margin-top: 20px; text-transform: uppercase;}
+		p {font-size: 14px; line-height: 20px; margin-right: 20px;}
+		.button {margin-top: 10px;}
+	}
+	$serviceImgScale: 1.1;
+	.cellInner:hover div img {
+		-ms-transform: scale($serviceImgScale);
+		-webkit-transform: scale($serviceImgScale);
+		transform: scale($serviceImgScale);
+	}
+		#tutorials {border-bottom: 10px solid $colorBlue;}
+		#videos {border-bottom: 10px solid $colorYellow;}
+		#books {border-bottom: 10px solid $colorRed;}
+		#podcasts {border-bottom: 10px solid $colorGreen;}
 }
 
 // Conference
@@ -125,11 +146,40 @@ header {
 
 // Footer
 footer {
-	background: $colorBlack; padding: 20px 0; margin-bottom: 50px;
+	background: $colorBlack; padding: 50px 0; margin-bottom: 50px; overflow: hidden;
+	#columns {
+		float: left; overflow: hidden; width: 74%;
+		border-right: 1px solid $colorGrey; border-right: 1px solid rgba(255,255,255,0.2);
+		.col {float: left; width: 33%;}
+	}
+	#formContact {
+		float: right; width: 24%; margin-left: 1%;
+		h3 {margin-bottom: 20px;}
+		input, textarea {
+			background: none; border: 1px solid $colorGrey; box-sizing: border-box; border-radius: 3px; color: $colorGrey; padding: 10px; width: 100%;
+			outline: none; // chrome
+			&:hover, &:active, &:focus {background: none; border: 1px solid $colorWhite; color: $colorWhite;}
+		}
+		textarea {margin: 20px 0;}
+		button {float: right;}
+	}
+	h3 {color: $colorWhite; font-family: $fontDefault; font-size: 16px; font-weight: bold;}
+	.navList {
+		a {display: block; font-size: 14px; margin-top: 20px;}
+		a:hover, a:focus, a:active {color: $colorWhite;}
+	}
+	p {font-size: 14px; line-height: 30px; margin: 20px 0;}
+	#copyright {
+		clear: both; padding: 30px 20px 0 0; overflow: hidden;
+		span {float: left; font-size: 12px; line-height: 20px; color: $colorGrey;}
+		nav {
+			float: right;
+			a {font-size: 20px; opacity: 0.5;}
+			a:hover, a:active, a:focus {opacity: 1;}
+			a+a {margin-left: 10px;}
+		}
+	}
 }
 
 // --- RESPONSIVE STYLES ---
-// ...
-
-// --- ANIMATIONS ---
 // ...
