--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -15,10 +15,13 @@ $colorYellow: #FBB943;
 $fontDefault: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $fontBitter: 'Bitter', serif; // Google Font (400/700)
 
-// --- CORE ---
+// --- RESET ---
 
 * {margin: 0; padding: 0;}
+html, body {height: 100%;}
 button {border: none; background: none;}
+
+// --- CORE ---
 
 html {background: $colorWhite; font-family: $fontDefault;}
 body {margin-top: 71px;} // offset for header
@@ -58,10 +61,14 @@ ul li {list-style: none;}
 
 // Header
 header {
-	background: $colorWhite; border-bottom: 1px solid $colorGreyLight; padding: 20px; overflow: hidden;
-	position: fixed; top: 0; left: 0; right: 0; z-index: 999;
+	background: $colorWhite; border-bottom: 1px solid $colorGreyLight; padding: 20px 0; overflow: hidden;
+	position: fixed; top: 0; left: 0; right: 0; z-index: 999999999;
 	#logo, #navPrimary {float: left;}
 	#btnContact {float: right;}
+	#hamburgerMenu {
+		display: none; // hide for all but mobile
+		cursor: pointer; float: right; padding-top: 7px;
+	}
 }
 #navPrimary {
 	margin-left: 40px;
@@ -73,6 +80,30 @@ header {
 #hero {
 	background: $colorBlack url('../../img/hero-graphic.png') center center repeat-x; background-size: cover; padding: 50px 20px 80px;
 	p {color: $colorWhite; font-size: 16px; line-height: 24px; margin: 20px 0;}
+}
+
+// Mobile Hamburger Menu
+#menuFade {
+	background: rgba(0,0,0,0);
+	position: fixed; top: 51px; left: 0; right: 0; bottom: 0; z-index: 777;
+	-webkit-transition: all 250ms linear; -ms-transition: all 250ms linear; transition: all 250ms linear;
+
+	#navMobile {
+		background: $colorWhite; padding: 20px; width: 200px;
+		position: fixed; top: 51px; right: 0; bottom: 0; z-index: 888;
+		margin-right: -240px;
+		a {display: block; font-size: 20px;}
+		a+a {margin-top: 40px;}
+		#linkTop {
+			border-bottom: 10px solid $colorGreen;
+			font-size: 18px; font-weight: bold; color: $colorBlack; margin-right: -20px; padding-bottom: 20px;
+			img {margin-right: 20px;}
+		}
+	}
+}
+.showFade {
+	background: rgba(0,0,0,0.95) !important;
+	#navMobile {margin-right: 0 !important;}
 }
 
 // Services
@@ -121,6 +152,7 @@ header {
 		h2 {font-size: 70px; line-height: 70px;}
 		h4 {color: $colorGrey; font-family: $fontDefault; font-size: 40px; line-height: 40px; font-weight: 100; margin: 20px 0;}
 	}
+	#confDeviceImgMobile {display: none;}
 }
 
 // Team
@@ -146,14 +178,14 @@ header {
 
 // Footer
 footer {
-	background: $colorBlack; padding: 50px 0; margin-bottom: 50px; overflow: hidden;
+	background: $colorBlack; padding: 50px 0; overflow: hidden;
 	#columns {
 		float: left; overflow: hidden; width: 74%;
-		border-right: 1px solid $colorGrey; border-right: 1px solid rgba(255,255,255,0.2);
 		.col {float: left; width: 33%;}
 	}
 	#formContact {
-		float: right; width: 24%; margin-left: 1%;
+		float: right; width: 23%; padding-left: 2%;
+		border-left: 1px solid $colorGrey; border-left: 1px solid rgba(255,255,255,0.2);
 		h3 {margin-bottom: 20px;}
 		input, textarea {
 			background: none; border: 1px solid $colorGrey; box-sizing: border-box; border-radius: 3px; color: $colorGrey; padding: 10px; width: 100%;
@@ -169,17 +201,106 @@ footer {
 		a:hover, a:focus, a:active {color: $colorWhite;}
 	}
 	p {font-size: 14px; line-height: 30px; margin: 20px 0;}
-	#copyright {
-		clear: both; padding: 30px 20px 0 0; overflow: hidden;
-		span {float: left; font-size: 12px; line-height: 20px; color: $colorGrey;}
-		nav {
-			float: right;
-			a {font-size: 20px; opacity: 0.5;}
-			a:hover, a:active, a:focus {opacity: 1;}
-			a+a {margin-left: 10px;}
-		}
+}
+
+// Copyright
+#copyright {
+	padding: 20px 0; overflow: hidden;
+	span {float: left; font-size: 12px; line-height: 20px; color: $colorGrey;}
+	nav {
+		float: right;
+		a {font-size: 20px; opacity: 0.5;}
+		a:hover, a:active, a:focus {opacity: 1;}
+		a+a {margin-left: 10px;}
 	}
 }
 
 // --- RESPONSIVE STYLES ---
-// ...
+
+@media (max-width: 1024px) {
+	.wrap {margin: 0 20px;}
+}
+@media (max-width: 1000px) {
+	#cells {
+		flex-wrap: no-wrap;
+		.cell {width: 100%;}
+	}
+}
+@media (max-width: 640px) {
+	#navPrimary {
+		margin-left: 15px;
+		a+a {margin-left: 15px;}
+	}
+	#conference {
+		#confText {
+			width: 100%;
+			h2 {font-size: 50px; line-height: 50px;}
+			h4 {font-size: 30px; line-height: 30px;}
+		}
+	}
+	#team #teamGallery {width: 100%;}
+	footer {
+		#columns {
+			.col {width: 50%;}
+			#colNav {display: none;}
+		}
+	}
+}
+@media (max-width: 560px) { // Hamburger Menu here down
+	body {margin-top: 51px;}
+	h1 {background: none; padding-left: 0;}
+	header {
+		padding: 10px 0;
+		#navPrimary, #btnContact {display: none;}
+		#hamburgerMenu {display: block;}
+	}
+	#hero br {display: none;}
+	#cells .cellInner {border-left: none; border-right: none; margin: 10px -20px 0;}
+	#conference {
+		#confText {
+			background: none; padding: 50px 0 0; text-align: center;
+			h4 {margin: 10px 0;}
+		}
+		#confDeviceImgMobile {display: block; width: 176px; height: auto; margin: 20px auto 0;}
+	}
+	#team {
+		#teamGallery {
+			a {width: 50%;}
+			a:nth-child(5) {margin-left: 0;}
+		}
+	}
+	footer {
+		#columns {display: none;}
+		#formContact {border: none; width: 100%;}
+	}
+	#copyright span {font-size: 10px;}
+}
+@media (max-width: 400px) {
+	h1 {
+		font-size: 45px; line-height: 40px;
+		strong {font-size: 50px;}
+	}
+	h2 {font-size: 30px;}
+	p, a {font-size: 14px; line-height: 20px;}
+	#hero {
+		padding: 20px 0 50px;
+		p {margin: 15px 0;}
+	}
+	#services {
+		padding: 20px 0;
+		#stats {
+			display: flex; flex-wrap: wrap; margin-top: 0;
+			li {
+				flex: 1 0 50%;
+	  			strong {margin-top: 20px;}
+			}
+		}
+	}
+	#cells {
+		.cellInner {
+			h2 {font-size: 20px; line-height: 20px;}
+			p {font-size: 12px; line-height: 18px; margin-right: 20px;}
+			.button {font-size: 10px;}
+		}
+	}
+}
