--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -84,15 +84,15 @@ header {
 
 // Mobile Hamburger Menu
 #menuFade {
-	display: none;
-	background: rgba(0,0,0,0);
+	background: rgba(0,0,0,0); margin-left: 100%;
 	position: fixed; top: 51px; left: 0; right: 0; bottom: 0; z-index: 777;
-	-webkit-transition: all 250ms linear; -ms-transition: all 250ms linear; transition: all 250ms linear;
+	-webkit-transition: background 250ms linear; -ms-transition: background 250ms linear; transition: background 250ms linear;
 
 	#navMobile {
-		background: $colorWhite; padding: 20px; width: 200px;
+		background: $colorWhite; margin-right: -240px; padding: 20px; width: 200px;
 		position: fixed; top: 51px; right: 0; bottom: 0; z-index: 888;
-		margin-right: -240px;
+		-webkit-transition: margin 100ms linear; -ms-transition: margin 100ms linear; transition: margin 100ms linear;
+
 		a {display: block; font-size: 20px;}
 		a+a {margin-top: 40px;}
 		#linkTop {
@@ -102,10 +102,9 @@ header {
 		}
 	}
 }
-.showFade {
-	display: block !important;
-	background: rgba(0,0,0,0.95) !important;
-	#navMobile {margin-right: 0 !important;}
+#menuFade.showFade {
+	background: rgba(0,0,0,0.95); margin-left: 0; // display: initial;
+	#navMobile {margin-right: 0;}
 }
 
 // Services
@@ -125,19 +124,10 @@ header {
 	.cell {width: 50%;}
 	.cellInner {
 		border: 1px solid $colorGreyLight; margin: 10px; overflow: hidden;
-		-webkit-transition: transform 500ms linear; -ms-transition: transform 500ms linear; transition: transform 500ms linear;
-		-webkit-transform: scale(1.0); -ms-transform: scale(1.0); transform: scale(1.0);
-
-		div {float: left; margin-right: 20px; width: 200px; height: 200px; overflow: hidden;}
+		div {float: left; margin-right: 20px; width: 200px; height: 200px;}
 		h2 {font-size: 28px; line-height: 28px; margin-top: 20px; text-transform: uppercase;}
 		p {font-size: 14px; line-height: 20px; margin-right: 20px;}
 		.button {margin-top: 10px;}
-	}
-	$serviceImgScale: 1.1;
-	.cellInner:hover div img {
-		-ms-transform: scale($serviceImgScale);
-		-webkit-transform: scale($serviceImgScale);
-		transform: scale($serviceImgScale);
 	}
 		#tutorials {border-bottom: 10px solid $colorBlue;}
 		#videos {border-bottom: 10px solid $colorYellow;}
@@ -152,7 +142,7 @@ header {
 		background: url('../../img/conf-device.png') center left no-repeat; width: 400px; margin: auto; padding: 50px 0 50px 200px;
 		h2, h4 {color: $colorWhite;}
 		h2 {font-size: 70px; line-height: 70px;}
-		h4 {color: $colorGrey; font-family: $fontDefault; font-size: 40px; line-height: 40px; font-weight: 100; margin: 20px 0;}
+		h4 {color: $colorGrey; font-family: $fontDefault; font-size: 35px; line-height: 35px; font-weight: 100; margin: 20px 0;}
 	}
 	#confDeviceImgMobile {display: none;}
 }
@@ -165,14 +155,7 @@ header {
 		width: 600px; overflow: hidden;
 		a {
 			float: left; font-size: 14px; padding-top: 40px; text-align: center; width: 25%;
-			transition: all 100ms ease-in-out;
-			div {border-radius: 50px; width: 100px; height: 100px; margin: 0 auto 5px; overflow: hidden;}
-		}
-		$teamImgScale: 1.1;
-		a:hover img {
-			-ms-transform: scale($teamImgScale);
-    		-webkit-transform: scale($teamImgScale);
-    		transform: scale($teamImgScale);
+			.rounded {border-radius: 50px; margin: 0 auto 5px; overflow: hidden; width: 100px; height: 100px;}
 		}
 		a:nth-child(5) {margin-left: 70px;} // center second row
 	}
@@ -190,7 +173,7 @@ footer {
 		border-left: 1px solid $colorGrey; border-left: 1px solid rgba(255,255,255,0.2);
 		h3 {margin-bottom: 20px;}
 		input, textarea {
-			background: none; border: 1px solid $colorGrey; box-sizing: border-box; border-radius: 3px; color: $colorGrey; padding: 10px; width: 100%;
+			background: none; border: 1px solid $colorGrey; box-sizing: border-box; border-radius: 3px; color: $colorGrey; font-family: $fontDefault; padding: 10px; width: 100%;
 			outline: none; // chrome
 			&:hover, &:active, &:focus {background: none; border: 1px solid $colorWhite; color: $colorWhite;}
 		}
@@ -214,6 +197,22 @@ footer {
 		a {font-size: 20px; opacity: 0.5;}
 		a:hover, a:active, a:focus {opacity: 1;}
 		a+a {margin-left: 10px;}
+	}
+}
+
+// --- ANIMATIONS ---
+
+$animZoomSpeed: 100ms;
+.animZoom {
+	position: relative; overflow: hidden;
+	img {
+		width: 100%;
+		height: 100%;
+		-moz-transition: all $animZoomSpeed; -webkit-transition: all $animZoomSpeed; transition: all $animZoomSpeed;
+	}
+	&:hover img {
+		margin: -5% 0 0 -5%;
+		width: 110%; height: 110%;
 	}
 }
 
@@ -278,7 +277,7 @@ footer {
 		#columns {display: none;}
 		#formContact {border: none; width: 100%;}
 	}
-	#copyright span {font-size: 10px;}
+	#copyright span {font-size: 9px;}
 }
 @media (max-width: 400px) {
 	h2 {font-size: 30px;}
@@ -299,8 +298,10 @@ footer {
 	}
 	#cells {
 		.cellInner {
-			h2 {font-size: 20px; line-height: 20px;}
-			p {font-size: 12px; line-height: 18px; margin-right: 20px;}
+			div, div img {width: 150px; height: 150px;}
+			div {margin-right: 10px;}
+			h2 {font-size: 18px; line-height: 18px; margin: 9px 0 10px;}
+			p {font-size: 10px; line-height: 16px; margin-right: 20px;}
 			.button {font-size: 10px;}
 		}
 	}
