--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -18,6 +18,7 @@ $fontBitter: 'Bitter', serif; // Google Font (400/700)
 // --- RESET ---
 
 * {margin: 0; padding: 0;}
+img {border: none;}
 html, body {height: 100%;}
 button {border: none; background: none;}
 
